# CStructsAndAlgos

./: CMakeLists.txt  library.h
Structures/: bst.c  bst.h  bst_node.c  bst_node.h  heap.c  heap.h
Structures/BinarySearchTree/: bst.c  bst.h  bst_node.c  bst_node.h
Structures/LinkedList/: linked_list.c  linked_list.h  ll_node.c  ll_node.h
